# soil-sampling

./: .devcontainer.json  .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  app.py  common-services.yml  docker-compose.dev-js.yml  docker-compose.dev-python.yml  docker-compose.dev.yml  docker-compose.yml  package-lock.json  package.json  requirements-dev.txt  requirements-main.txt  setup.cfg
.circleci/: config.yml
.devcontainer/: devcontainer.json
api/: .devcontainer.json  Dockerfile  apiTesting.py  app.py  requirements.txt  serverless.yml
api/sampling/: __init__.py  clustering.py  constants.py  data.py  uniform.py  utils.py  voronoi.py
notebooks/: call-api.ipynb
public/: index.html
soil_sampling/: __init__.py  __main__.py  app.py  app_test.py  clustering.py  exceptions.py  uniform.py  utils.py  voronoi.py
soil_sampling/sampling/: clustering.py  data.py
src/: App.css  App.js  CustomForm.js  Mapbox.js  Mapstyle.js  Markers.js  Store.js  actions.js  api.js  api.test.js  area.js  draw-helpers.js  index.js  path.js  store.js  styles.js  theme.json
src/Components/: Footer.js  Header.js  Navbar.js
src/algorithms/: constants.js  uniform.js  utils.js
src/components/: Circle.js  ClusteringForm.js  CustomForm.js  CustomMarker.js  Display.js  Drawer.js  Header.js  Instructions.js  Loading.js  Mapbox.js  Navbar.js  SavePointsModal.js  SubmitActions.js  Toolbox.js  UniformForm.js  Viewport.js  ViewportForm.js  VoronoiForm.js
ui/: .devcontainer.json  .gitignore  Dockerfile  package-lock.json  package.json
web/: App.js  store.js
(+11 files in other folders)
