[metadata]
name = soil-sampling
version = 0.1.0
author = Sparrow Computing
author_email = ben@sparrow.dev

[options]
install_requires = 
    alphashape
    async-retriever
    beautifulsoup4
    fire
    flask
    flask-cors
    geopandas
    gunicorn
    hydrosignatures
    numpy
    requests
    scipy
    shapely<2
    py3dep
    pydaymet
    pygeohydro
    pygeoogc
    pygeoutils
    pynhd
    pynldas2
    utm

[options.extras_require]
dev =
    jupyter
    pytest
    pytest-cov

[options.entry_points]
console_scripts = 
    soil-sampling = soil_sampling.__main__:main

[pylint.FORMAT]
disable = all
enable = unused-import